--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,10 @@ name = "pypi"
 pandas = "*"
 matplotlib = "*"
 seaborn = "*"
+pytest = "*"
 
 [dev-packages]
 pre-commit = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
